--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"tailwindcss": "^3.3.2",
-		"vite": "^4.4.2"
+		"vite": "^4.5.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"d3": "^7.8.5",
+		"jquery-csv": "^1.0.21"
+	}
 }
