--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-cloudflare": "^1.0.0-next.45",
 		"@sveltejs/adapter-netlify": "^2.0.8",
 		"d3": "^7.8.5",
 		"jquery-csv": "^1.0.21"
