--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-cloudflare": "next",
-		"@sveltejs/adapter-auto": "^3.1.1",
-		"@sveltejs/kit": "^1.27.6",
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.55.0",
 		"eslint-config-prettier": "^8.10.0",
