--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@sveltejs/adapter-auto": "^3.1.1",
 		"@sveltejs/adapter-cloudflare": "next",
 		"d3": "^7.8.5",
-		"jquery-csv": "^1.0.21"
+		"jquery-csv": "^1.0.21",
+		"leaflet": "^1.9.4"
 	}
 }
