--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "latest",
+		"@sveltejs/adapter-cloudflare": "latest",
 		"@sveltejs/kit": "latest",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.55.0",
@@ -25,7 +25,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-static": "latest",
+		"@sveltejs/adapter-cloudflare": "latest",
 		"d3": "^7.8.5",
 		"jquery-csv": "^1.0.21",
 		"leaflet": "^1.9.4"
