--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 .netlify
 .idea
+
+# Sphinx documentation source (only built HTML is needed)
+static/documentation/raisin_plugin_src
